--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main # Deploy only when changes are pushed to the main branch
+      - test-branch # Add this branch for testing
+
 
 jobs:
   build-and-deploy:
